encompasses screen windows, metafiles, printers and the bmp, jpeg and
png devices).  The default background color is "transparent" for all
but the bitmap devices: this means that backgrounds are omitted when
plotting to/saving to most devices.  The png() device does support
transparent backgrounds, but this is not accessible through the 
menus nor the savePlot() function.

The console pop-up was checking the wrong item for `Buffered output'.

Installing a package now first removes the data and demo directories
if they exist.

Building under (repaired) Cygwin -mno-cygwin environments is no longer
supported.  You probably do need the compiler system recommended for
rw1031 or later.

libR.a is no longer used (except when cross-building) as the
recommended compiler can import directly from R.dll.

globalvar.h is no longer used: the header files now declare imported
variables.  This make it essential to use the R header files rather
than copying entries from them.



rw1031
======

Lines with lty > 1 and many pieces were being drawn very slowly on
Windows 2000 (but not 98/ME).  To work around this, such lines are
now drawn 5000 pieces at a time.

The dialog for the `Change dir' item now uses a standard folder
selection widget for its Browse button.

White backgrounds are now omitted for metafiles (as they are for
postscript, PDF and XFig plots), so white backgounds (the default)
appear to be transparent.

help.start() now updates the HTML search index (as well as the
packages index) when it is started up.  link.html.help() works better
when R_LIBS omits the drive, and uses relative links for the main
library, so R installations can be relocated in the file system.

The background colour of the GUI preferences editor and the
select.list() popup is now taken from the Windows colour scheme.

Rcmd INSTALL now rejects invalid options for --docs (rather than
ignoring them), and checks for the R version in the DESCRIPTION file